# rs_svg

./: Cargo.toml  README.md
src/: lib.rs  utils.rs
src/attributes/: mod.rs
src/attributes/generic/: core_attr_props.rs  mod.rs
src/elements/shapes/: mod.rs
src/elements/shapes/circle/: circle.rs  circle_attributes.rs  mod.rs
src/elements/shapes/ellipse/: ellipse.rs  ellipse_attributes.rs  mod.rs
src/elements/shapes/line/: line.rs  line_attributes.rs  mod.rs
src/elements/shapes/path/: mod.rs  path.rs  path_attributes.rs
src/elements/shapes/polygon/: mod.rs  polygon.rs  polygon_attributes.rs
src/elements/shapes/polyline/: mod.rs  polyline.rs  polyline_attributes.rs
src/elements/shapes/rectangle/: mod.rs  rectangle.rs  rectangle_attributes.rs
