[package]
name = "rs_svg"
version = "0.1.0"
authors = ["djedou"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.65"
djed = {git = "https://github.com/djedou/djed"}
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7"
markup = "0.4.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  "SvgElement",
  "SvgTextElement",
  "SvggElement",
  "SvgLineElement",
  "SvgAnimatedLength"
]